# C-Sudoku

./: CMakeLists.txt  README.md
src/: main.c
src/board-sizes/: main.h
src/board/create/: main.c
src/board/fill/: main.c  main.h
src/board/generate/: main.c  main.h
src/difficulty-levels/: difficulty-levels.h  main.c  main.h
src/file/close/: main.c  main.h
src/file/open/: main.c  main.h
src/file/read/: main.c  main.h
src/file/write/: main.c  main.h
src/game/parse/: main.c  main.h
src/game/read/: main.c  main.h
src/game/save/: main.c  main.h
src/game/serialize/: main.c  main.h
src/helpers/: delete-random-numbers.c  delete-random-numbers.h  wait-for-enter.c  wait-for-enter.h
src/menu/: main-menu.c  main-menu.h  print-menu.c  print-menu.h
src/menu/inputs/: clearInputBuffer.c  clearInputBuffer.h  inputFilename.c  inputFilename.h  inputInteger.c  inputInteger.h
src/menu/instructions/: main.c  main.h
src/menu/load-game/: main.c  main.h
src/menu/new-game/: aa  filename.txt  filename1.txt  filename2.txt  filename3.txt  main.c  main.h
src/menu/select-board-size/: main.c  main.h
src/menu/select-difficulty-level/: main.c  main.h
src/solver/: is-sudoku-solved.c  is-sudoku-solved.h  main.h
src/validate/: main.h
