cmake_minimum_required(VERSION 3.30)
project(Sudoku C)

set(CMAKE_C_STANDARD 23)

add_executable(Sudoku src/main.c
        src/display/main.c
        src/display/main.h
        src/board-sizes/main.c
        src/board-sizes/main.h
        src/menu/main-menu.c
        src/menu/main-menu.h
        src/menu/select-difficulty-level/main.c
        src/menu/select-difficulty-level/main.h
        src/menu/select-board-size/main.c
        src/menu/select-board-size/main.h
        src/menu/print-menu.c
        src/menu/print-menu.h
        src/difficulty-levels/main.c
        src/difficulty-levels/main.h
        src/solver/main.c
        src/solver/main.h
        src/validate/main.c
        src/validate/main.h
        src/board/fill/main.c
        src/board/fill/main.h
        src/menu/new-game/main.c
        src/menu/new-game/main.h
        src/helpers/get-random-number.c
        src/helpers/get-random-number.h
        src/helpers/generate-array.c
        src/helpers/generate-array.h
        src/helpers/delete-random-numbers.c
        src/helpers/delete-random-numbers.h
        src/board-sizes/board-sizes.h
        src/difficulty-levels/difficulty-levels.h
        src/menu/instructions/main.c
        src/menu/instructions/main.h
        src/solver/is-sudoku-solved.c
        src/solver/is-sudoku-solved.h
        src/board/create/main.c
        src/board/create/main.h
        src/file/write/main.c
        src/file/write/main.h
        src/file/read/main.c
        src/file/read/main.h
        src/file/open/main.c
        src/file/open/main.h
        src/file/close/main.c
        src/file/close/main.h
        src/game/read/main.c
        src/game/read/main.h
        src/game/save/main.c
        src/game/save/main.h
        src/game/serialize/main.c
        src/game/serialize/main.h
        src/game/parse/main.c
        src/game/parse/main.h
        src/board/generate/main.c
        src/board/generate/main.h
        src/menu/load-game/main.c
        src/menu/load-game/main.h
        src/menu/inputs/inputFilename.c
        src/menu/inputs/inputFilename.h
        src/board/empty-cell.h
        src/helpers/wait-for-enter.c
        src/helpers/wait-for-enter.h
        src/menu/inputs/inputInteger.c
        src/menu/inputs/inputInteger.h
        src/menu/inputs/clearInputBuffer.c
        src/menu/inputs/clearInputBuffer.h
        src/board/generate/generateEmptyCellPositions.c
        src/board/generate/generateEmptyCellPositions.h
        src/board/generate/generateAllBoardPositions.c
        src/board/generate/generateAllBoardPositions.h
        src/board/countEmptyCells.c
        src/board/countEmptyCells.h
)
